[gd_scene load_steps=3 format=3 uid="uid://dkwte8idjpjtg"]

[ext_resource type="Script" uid="uid://bhqqrkoyr7qfh" path="res://addons/inventory-system-demos/tutorials/tutorial_create_and_use_craft_station_type/furnace_test.gd" id="1_nypqm"]
[ext_resource type="InventoryDatabase" uid="uid://8g6jugqd8mtl" path="res://addons/inventory-system-demos/tutorials/tutorial_create_and_use_craft_station_type/create_and_use_craft_station_type_database.tres" id="1_o0mvp"]

[node name="FurnaceTest" type="Node"]
script = ExtResource("1_nypqm")

[node name="FurnaceStation" type="CraftStation" parent="."]
input_inventories = Array[NodePath]([NodePath("../InputInventory")])
output_inventories = Array[NodePath]([NodePath("../OutputInventory")])
type_id = "furnace"
database = ExtResource("1_o0mvp")

[node name="InputInventory" type="Inventory" parent="."]
database = ExtResource("1_o0mvp")

[node name="OutputInventory" type="Inventory" parent="."]
database = ExtResource("1_o0mvp")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Furnace Station"

[node name="StatusContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InputLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/StatusContainer"]
layout_mode = 2

[node name="OutputLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/StatusContainer"]
layout_mode = 2

[node name="RecipesLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Available Smelting Recipes:"

[node name="RecipesList" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddMaterialsButton" type="Button" parent="UI/MarginContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2
text = "Add Materials"

[node name="SmeltAllButton" type="Button" parent="UI/MarginContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2
text = "Smelt All"

[node name="ProgressLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
